--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_success:
   - docker build -t yuyi93/multi-worker -f ./client/Dockerfile ./worker
   #Take imaegs and push to docker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push yuyi93/multi-client -tag example
-  # - docker push yuyi93/multi-nginx
-  # - docker push yuyi93/multi-server
-  # - docker push yuyi93/multi-worker
+  - docker push yuyi93/multi-client
+  - docker push yuyi93/multi-nginx
+  - docker push yuyi93/multi-server
+  - docker push yuyi93/multi-worker
